ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Genaration_Metadata__mdt/Lead_Genaration_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Lead Genaration Metadata</label>
    <pluralLabel>Lead Genaration Metadatas</pluralLabel>
</CustomObject>