ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Genaration_Metadata__mdt/fields/FieldSetName__c.field-meta.xml
<CustomField>
    <fullName>FieldSetName__c</fullName>
    <label>FieldSetName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>