ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Genaration_Metadata__mdt/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>