ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Genaration_Metadata__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>25</length>
    <type>Text</type>
</CustomField>