ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Genaration_Metadata__mdt/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <label>Screen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>