ProdIND/ProdPrograms/force-app/main/default/objects/Lead_Genaration_Metadata__mdt/fields/UpdateOrDeactivateOperation__c.field-meta.xml
<CustomField>
    <fullName>UpdateOrDeactivateOperation__c</fullName>
    <label>UpdateOrDeactivateOperation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>